Implementação do dialog de cadastro de histórico social e patologias do paciente

--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <app-fieldset-historico-social [informacoesPreviasHistoricosSociais]="historicosPaciente.informacoesPreviasHistoricosSociais" 
-                        [paciente]="paciente" [exibirBotaoCadastrarHistorico]="true" 
+                        [paciente]="paciente" [exibirBotaoCadastrarHistorico]="true" [respostaSimNao]="respostaSimNao"
                         [informacoesParaCadastro]="informacoesCadastroConsulta.historicoSocial">
                     </app-fieldset-historico-social>
                 </div>
