--- a/src/app/atendimento-paciente/ficha-consulta-retorno/avaliacao-composicao-corporal/avaliacao-composicao-corporal.component.html
+++ b/src/app/atendimento-paciente/ficha-consulta-retorno/avaliacao-composicao-corporal/avaliacao-composicao-corporal.component.html
@@ -90,21 +90,22 @@
         <div class="row mt-2">
             <div class="col-12 col-sm-6 col-md-4">
                 <span class="p-float-label">
-                    <input type="text" [style]="{width: '150px'}" [(ngModel)]="formularioCadastro.pesoAtualKg" pInputText
+                    <input type="text" mask="0*.00" maxlength="6" [style]="{width: '150px'}" [(ngModel)]="formularioCadastro.pesoAtualKg" pInputText
                         (ngModelChange)="validarFormulario($event)"> 
                     <label for="inputtext">Peso atual (kg)</label>
                 </span>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <span class="p-float-label">
-                    <input type="text" [style]="{width: '150px'}" [(ngModel)]="formularioCadastro.estaturaMetros" pInputText
-                        (ngModelChange)="validarFormulario($event)"> 
+                    <input type="text" mask="0*.00" maxlength="4" [style]="{width: '150px'}" 
+                        [(ngModel)]="formularioCadastro.estaturaMetros" pInputText (ngModelChange)="validarFormulario($event)"> 
                     <label for="inputtext">Estatura (m)</label>
                 </span>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <span class="p-float-label">
-                    <input type="text" [style]="{width: '150px'}" [(ngModel)]="formularioCadastro.indiceMassaCorporalKgMetrosQuadrado" 
+                    <input type="text" mask="0*.00" maxlength="7" [style]="{width: '150px'}" 
+                        [(ngModel)]="formularioCadastro.indiceMassaCorporalKgMetrosQuadrado" 
                         pInputText (ngModelChange)="validarFormulario($event)"> 
                     <label for="inputtext">IMC (Kg/m²)</label>
                 </span>
@@ -114,7 +115,8 @@
         <div class="text-center mt-4">
             <div>
                 <span>Dobra Cutânea Tricipital (DCTRI) </span>
-                <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaTricipitalMilimetros" 
+                <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                    [(ngModel)]="formularioCadastro.dobraCutaneaTricipitalMilimetros" 
                     pInputText (ngModelChange)="validarFormulario($event)"> 
                 mm
             </div>
@@ -122,13 +124,15 @@
             <div *ngIf="sexoPaciente === 'Masculino'">
                 <div class="mt-2">
                     <span>Dobra Cutânea Peitoral (DCPE) </span>
-                    <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaPeitoralHomemMilimetros" 
+                    <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                        [(ngModel)]="formularioCadastro.dobraCutaneaPeitoralHomemMilimetros" 
                         pInputText (ngModelChange)="validarFormulario($event)"> 
                     mm
                 </div>
                 <div class="mt-2">
                     <span>Dobra Cutânea Abdominal (DCAB) </span>
-                    <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaAbdominalHomemMilimetros" 
+                    <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                        [(ngModel)]="formularioCadastro.dobraCutaneaAbdominalHomemMilimetros" 
                         pInputText (ngModelChange)="validarFormulario($event)"> 
                     mm
                 </div>
@@ -136,27 +140,31 @@
 
             <div *ngIf="sexoPaciente === 'Feminino'" class="mt-2">
                 <span>Dobra Cutânea Supra ilíaca (DCSI) </span>
-                <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaSupraIliacaMulherMilimetros" 
+                <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                    [(ngModel)]="formularioCadastro.dobraCutaneaSupraIliacaMulherMilimetros" 
                     pInputText (ngModelChange)="validarFormulario($event)"> 
                 mm
             </div>
 
             <div class="mt-2">
                 <span>Dobra Cutânea Coxa (DCCO) </span>
-                <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaCoxaMilimetros" 
+                <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                    [(ngModel)]="formularioCadastro.dobraCutaneaCoxaMilimetros" 
                     pInputText (ngModelChange)="validarFormulario($event)"> 
                 mm
             </div>
             <div class="mt-2">
                 <span>Dobra Cutânea Panturrilha (DCPA) </span>
-                <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.dobraCutaneaPanturrilhaMilimetros" 
+                <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                    [(ngModel)]="formularioCadastro.dobraCutaneaPanturrilhaMilimetros" 
                     pInputText (ngModelChange)="validarFormulario($event)"> 
                 mm
             </div>
 
             <div class="mt-4">
                 <span class="mr-1"><b>Densidade Corporal</b> </span>
-                <input type="text" [style]="{width: '100px'}" [(ngModel)]="formularioCadastro.resultadoCalculoDensidadeCorporal" 
+                <input type="text" mask="0*.00" maxlength="8" [style]="{width: '100px'}" 
+                    [(ngModel)]="formularioCadastro.resultadoCalculoDensidadeCorporal" 
                     pInputText (ngModelChange)="validarFormulario($event)"> 
             </div>
         </div>
@@ -166,7 +174,8 @@
 
             <div class="mt-4">
                 <span class="p-float-label">
-                    <input type="text" [style]="{width: '150px'}" [(ngModel)]="formularioCadastro.porcentagemGorduraDensidadeCorporal" 
+                    <input type="text" mask="0*.00" maxlength="6" [style]="{width: '150px'}" 
+                        [(ngModel)]="formularioCadastro.porcentagemGorduraDensidadeCorporal" 
                         pInputText (ngModelChange)="validarFormulario($event)"> 
                     <label for="inputtext">% Gordura</label>
                 </span>
