Implementação de cadastro de Atividade Física

--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -81,8 +81,9 @@
         
             <div class="row mt-4">
                 <div class="col-12 col-md-6">
-                    <app-fieldset-historico-atividade-fisica [paciente]="paciente"
-                        [informacoesHistoricosAtividadeFisica]="historicosPaciente.informacoesHistoricosAtividadeFisica">
+                    <app-fieldset-historico-atividade-fisica [paciente]="paciente" [exibirBotaoCadastrarHistorico]="true"
+                        [informacoesHistoricosAtividadeFisica]="historicosPaciente.informacoesHistoricosAtividadeFisica"
+                        [frequenciaAtividadeFisica]="informacoesCadastroConsulta.frequenciaAtividadeFisica">
                     </app-fieldset-historico-atividade-fisica>
                 </div>
                 <div class="col-12 col-md-6">
